fixed patch user
